# RUST_BareMetal

./: .gitignore  README.md
fibo/: Cargo.toml
fibo/src/: main.rs
problems/src/: main.rs
tp-led-matrix/: Cargo.toml  README.md
tp-led-matrix/.cargo/: config.toml
tp-led-matrix/src/: lib.rs  main.rs
tp-led-matrix/src/embedded/: mod.rs
tp-led-matrix/src/gamma/: mod.rs
tp-led-matrix/src/image/: mod.rs
tp-led-matrix/src/matrix/: mod.rs
tp-led-matrix/src/tasks/: mod.rs
vm/: Cargo.toml
vm/src/: machine.rs
vm/tests/: basic_operations.rs
