[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.2.0", features = ["stm32l475vg","time-driver-any"] }
micromath = "2.1.0"
panic-halt = "1.0.0"
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embedded-hal = "1.0.0"
embassy-executor = { version = "0.7.0", features =["arch-cortex-m","executor-thread","defmt"]}
embassy-sync = "0.6.2"
heapless = "0.8.0"
futures = { version = "0.3", default-features = false }
[[bin]]
name = "tp-led-matrix"

[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations


